--- a/package.json
+++ b/package.json
@@ -15,19 +15,21 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
   "devDependencies": {
-    "@types/dotenv": "^6.1.0",
     "@types/axios": "^0.14.0",
-    "concurrently": "^4.1.0",
-    "nodemon": "^1.18.9",
-    "tslint": "^5.12.1",
-    "typescript": "^3.3.3"
+    "@types/dotenv": "^8.2.0",
+    "@types/node": "^14.14.41",
+    "@types/ws": "^7.4.1",
+    "concurrently": "^6.0.2",
+    "nodemon": "^2.0.7",
+    "tslint": "^6.1.3",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
-    "discord.js": "https://github.com/discordjs/discord.js.git#ae7269088b99dfff614ea66ba9c67baeb1bd9169",
-    "dotenv": "^6.2.0",
-    "node-opus": "^0.3.1",
-    "random": "^2.0.13",
+    "@discordjs/opus": "^0.5.0",
+    "axios": "^0.21.1",
     "bufferutil": "^4.0.1",
-    "axios": "^0.18.0"
+    "discord.js": "12.5.3",
+    "dotenv": "^8.2.0",
+    "random": "^3.0.5"
   }
 }
