Added missing cache properties to docker build

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -37,6 +37,8 @@ jobs:
           context: .
           platforms: linux/amd64
           push: true
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
           tags: |
             ghcr.io/mormund/discordquotebot:latest
       -
